--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,20 @@
 .Trashes
 ehthumbs.db
 Thumbs.db
+
+# Logs
+logs
+*.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+pnpm-debug.log*
+lerna-debug.log*
+
+node_modules
+node_modules/*
+dist
+dist/*
+dist-ssr
+*.local
+.env*
